this will fix a bug where the text input fields moved on mobile due to the mobile keyboard

--- a/styles.css
+++ b/styles.css
@@ -107,7 +107,7 @@ input {
 #game-start-overlay {
   height: 100vh;
   width:100%;
-  position: absolute;
+  position: fixed;
   z-index: 999;
   background-image: url("./Christmas Background.jpg");
   display: flex;
